Catalouge is ready

--- a/index.html
+++ b/index.html
@@ -82,6 +82,93 @@
         </div>
     </div>
 </header>
+
+<div class="catalogue">
+    <div class="catalogue_content">
+        <div class="catalogue_container">
+            <h5>Ваше замовлення:</h5>
+            <div class="catalogue_list">
+                <div class="list">
+                    <div class="img">
+                        <img src="./assets/images/catalogue%20list.png" alt="No image">
+                    </div>
+                    <div class="text">
+                        <p>Спінінг Golden Catch Inquisitor INS-962Н 2.89 м 14-56 г</p>
+                        <span>4 850 грн</span>
+                    </div>
+                    <button class="list_delete">
+                        <img src="./assets/images/close.png" alt="No image">
+                    </button>
+                </div>
+                <div class="list">
+                    <div class="img">
+                        <img src="./assets/images/catalogue%20list%201.png" alt="No image">
+                    </div>
+                    <div class="text">
+                        <p>Спінінг Golden Catch Inquisitor INS-962Н 2.89 м 14-56 г</p>
+                        <span>4 850 грн</span>
+                    </div>
+                    <button class="list_delete">
+                        <img src="./assets/images/close.png" alt="No image">
+                    </button>
+                </div>
+                <div class="list">
+                    <div class="img">
+                        <img src="./assets/images/catalogue%20list%202.png" alt="No image">
+                    </div>
+                    <div class="text">
+                        <p>Спінінг Golden Catch Inquisitor INS-962Н 2.89 м 14-56 г</p>
+                        <span>4 850 грн</span>
+                    </div>
+                    <button class="list_delete">
+                        <img src="./assets/images/close.png" alt="No image">
+                    </button>
+                </div>
+                <div class="list">
+                    <div class="img">
+                        <img src="./assets/images/catalogue%20list.png" alt="No image">
+                    </div>
+                    <div class="text">
+                        <p>Спінінг Golden Catch Inquisitor INS-962Н 2.89 м 14-56 г</p>
+                        <span>4 850 грн</span>
+                    </div>
+                    <button class="list_delete">
+                        <img src="./assets/images/close.png" alt="No image">
+                    </button>
+                </div>
+                <div class="list">
+                    <div class="img">
+                        <img src="./assets/images/catalogue%20list%201.png" alt="No image">
+                    </div>
+                    <div class="text">
+                        <p>Спінінг Golden Catch Inquisitor INS-962Н 2.89 м 14-56 г</p>
+                        <span>4 850 грн</span>
+                    </div>
+                    <button class="list_delete">
+                        <img src="./assets/images/close.png" alt="No image">
+                    </button>
+                </div>
+            </div>
+        </div>
+        <div class="paragraph">
+            <div class="catalogue_container">
+                <p>Ваше замовлення більше 1000 грн, а отже ви можете взяти участь у нашій програмі лояльності!</p>
+                <span> <a href="#">Зареєструйтесь</a> або <a href="#">увійдіть</a> у свій акаунт.</span>
+            </div>
+        </div>
+            <div class="catalogue_container">
+                <div class="total_price">
+                <span>Сума замовлення:</span>
+                <span>5144 грн</span>
+            </div>
+        </div>
+        <div class="payment">
+            <button>До оплати</button>
+        </div>
+
+    </div>
+</div>
+
 <div class="content">
     <div class="container">
         <div class="selected_page_route">
