--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                 і вам буде доступний особистий кабінет з приємними бонусами!
             </p>
         </div>
-        <div class="close" id="1">
+        <div class="close" id="_1">
             <img src="./assets/images/Close%202.png" alt="No image">
         </div>
 
