--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
     <div class="reset_password_submit_content">
         <form action="#">
             <h5>ВІдновлення паролю</h5>
-            <input type="number" placeholder="Номер телефону">
+            <input type="number" placeholder="Введіть код">
             <p class="resend_code">
                 Якщо код не буде надісланий протягом 60 секунд, натисніть сюди.
             </p>
